Fix cell splitting on small screens

--- a/src/app/modules/shared/components/tables/mat-fsp-table/mat-fsp-table.component.scss
+++ b/src/app/modules/shared/components/tables/mat-fsp-table/mat-fsp-table.component.scss
@@ -2,6 +2,10 @@ table {
     width: 100%;
 }
 
+.mat-cell {
+    padding: 6px;
+}
+
 .scroll-container {
     overflow: auto;
 }
